# suumo_mcp_sample

./: .gitignore  README.md  package.json
mcp-client/: pyproject.toml
mcp-client/src/: client.py  main.py
mcp-server/: pyproject.toml
mcp-server/src/: api.py  main.py
mcp-server/src/suumo_mcp/: suumo_scraper.py
