[project]
name = "suumo-mcp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tominmin", email = "fate59133@gmail.com" }
]
dependencies = [
    "fastapi-mcp>=0.3.3",
    "beautifulsoup4>=4.13.4",
    "fastapi",
    "uvicorn",
    "httpx",
    "mcp[cli]>=1.7.1",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
